<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
<!-- The View. -->
    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" >
        
        <TextView
        	android:id="@+id/textView1"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/from"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/source"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:inputType="text" />
    </TableRow>
    
    <TableRow
    	android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
	        android:id="@+id/textView1"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/to"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
        	android:id="@+id/destination"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:inputType="text" />
	</TableRow>
	
    <TableRow
    	android:id="@+id/tableRow3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
                
        <TextView
        	android:id="@+id/textView3"
            android:layout_width="wrap_content"
           	android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/departureDate"
            android:textAppearance="?android:attr/textAppearanceMedium" />
	</TableRow>
	
    <TableRow
		android:id="@+id/tableRow4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
            
    	<DatePicker
    	    android:id="@+id/depDate"
    	    android:layout_width="wrap_content"
    	    android:layout_height="120dp"
    	    android:calendarViewShown="false"
    	    android:endYear="2015"
    	    android:spinnersShown="true"
    	    android:startYear="2012" />
            
      	<Spinner
            android:id="@+id/depTime"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical" 
            android:prompt="@string/depTime"/>
	</TableRow>
	
	<TableRow
    	android:id="@+id/tableRow5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
                
        <TextView
        	android:id="@+id/textView4"
            android:layout_width="wrap_content"
           	android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/returnDate"
            android:textAppearance="?android:attr/textAppearanceMedium" />
	</TableRow>
	
    <TableRow
		android:id="@+id/tableRow6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
            
    	<DatePicker
    	    android:id="@+id/returnDate"
    	    android:layout_width="wrap_content"
    	    android:layout_height="120dp"
    	    android:calendarViewShown="false"
    	    android:endYear="2015"
    	    android:spinnersShown="true"
    	    android:startYear="2012" />
            
      	<Spinner
            android:id="@+id/returnTime"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical" 
            android:prompt="@string/retTime"/>
	</TableRow>
	
	<TableRow
    	android:id="@+id/tableRow7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
           
        <TextView
        	android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/noOfPassengers"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/numberOfPassengers"
            android:layout_width="70dp"
            android:layout_height="40dp" 
            android:prompt="@string/noOfPassengers"/>
	</TableRow>
	
    <TableRow
        android:id="@+id/tableRow8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/submit"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_gravity="start"
            android:layout_marginLeft="30dp"
            android:text="@string/submit" />

        <Button
            android:id="@+id/clear"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:layout_marginLeft="50dp"
            android:text="@string/clear" />

    </TableRow>
</LinearLayout>